# bolt

./: README.md  conanfile.py
.devcontainer/: README.md
.github/runners/: .env  Dockerfile  Dockerfile.conanserver  docker-compose.yml  runner-base-compose.yml  setup-runners.sh  variables.env
.github/runners/conanserver/: start-conan-server.sh
.github/runners/runner/: entrypoint.py
.github/workflows/: build-test.yml
bolt/common/base/: SpillConfig.cpp  SpillConfig.h
bolt/common/caching/: AsyncDataCache.cpp
bolt/common/memory/: Memory.cpp
bolt/connectors/hive/: HiveDataSource.cpp  SplitReader.cpp  SplitReader.h
bolt/dwio/: CMakeLists.txt
bolt/dwio/common/: Options.h
bolt/dwio/parquet/: CMakeLists.txt
bolt/dwio/parquet/decryption/: AesDecryptor.cpp  AesDecryptor.h  CMakeLists.txt  Decryptor.h  KmsClient.h  ParquetFileDecryptor.cpp  ParquetFileDecryptor.h
bolt/dwio/parquet/decryption/test/: AesDecryptorTest.cpp  CMakeLists.txt  ParquetFileDecryptorTest.cpp
bolt/exec/: Driver.cpp  Driver.h
bolt/functions/sparksql/: SplitFunctions.cpp
bolt/vector/benchmarks/: CMakeLists.txt
bolt/vector/fuzzer/: VectorFuzzer.cpp
scripts/: install-bolt-deps.sh  install-gcc.sh  setup-dev-env.sh
scripts/conan/patches/: arrow.15.0.1-csv-support.patch  cmake-add-versions-support.patch  date-java-compatibility.patch  duckdb-old-0.8.1-support.patch  folly-old-2022.10.31-support.patch  gnu-config-download-url-fix.patch  llvm-core-recipe-fix.patch  protobuf-support-3.21.4.patch  roaring-bump-4.3.1.patch  utf8proc-bump-2.11.0.patch
(+27 files in other folders)
